<?php

namespace App\Entity;

use App\Repository\ArticleRepository;
use Doctrine\Common\Collections\ArrayCollection;
use Doctrine\Common\Collections\Collection;
use Doctrine\DBAL\Types\Types;
use Doctrine\ORM\Mapping as ORM;
use Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity;
use Symfony\Component\Validator\Constraints as Assert;

#[ORM\Entity(repositoryClass: ArticleRepository::class)]
#[UniqueEntity(
    'titre',
    message: 'Il existe déjà un artcile possédant ce titre !'
)]
class Article
{
    #[ORM\Id]
    #[ORM\GeneratedValue]
    #[ORM\Column]
    private ?int $id = null;

    #[ORM\Column(length: 200)]
    #[Assert\NotBlank]
    #[Assert\Length(min :5)]
    private ?string $titre = null;

    #[ORM\Column(type: Types::TEXT)]
    private ?string $contenu = null;

    #[ORM\Column(type: Types::DATETIME_MUTABLE)]
    private ?\DateTimeInterface $createdAt = null;

    #[ORM\Column(length: 255)]
    private ?string $slug = null;

    #[ORM\ManyToOne(inversedBy: 'articles')]
    private ?Categorie $categorie = null;

    #[ORM\OneToMany(mappedBy: 'Article_id', targetEntity: Commentaire::class)]
    private Collection $Utilisateur_id;

    #[ORM\OneToMany(mappedBy: 'Article', targetEntity: Commentaire::class)]
    private Collection $commentaires;

    #[ORM\Column(nullable: true)]
    private ?bool $publie = null;

    #[ORM\Column(nullable: true)]
    private ?bool $publi = null;



    public function __construct()
    {
        $this->Utilisateur_id = new ArrayCollection();
        $this->commentaires = new ArrayCollection();
    }

    public function getId(): ?int
    {
        return $this->id;
    }

    public function getTitre(): ?string
    {
        return $this->titre;
    }

    public function setTitre(string $titre): self
    {
        $this->titre = $titre;

        return $this;
    }

    public function getContenu(): ?string
    {
        return $this->contenu;
    }

    public function setContenu(string $contenu): self
    {
        $this->contenu = $contenu;

        return $this;
    }

    public function getCreatedAt(): ?\DateTimeInterface
    {
        return $this->createdAt;
    }

    public function setCreatedAt(\DateTimeInterface $createdAt): self
    {
        $this->createdAt = $createdAt;

        return $this;
    }

    public function getSlug(): ?string
    {
        return $this->slug;
    }

    public function setSlug(string $slug): self
    {
        $this->slug = $slug;

        return $this;
    }

    public function getCategorie(): ?Categorie
    {
        return $this->categorie;
    }

    public function setCategorie(?Categorie $categorie): self
    {
        $this->categorie = $categorie;

        return $this;
    }

    /**
     * @return Collection<int, Commentaire>
     */
    public function getUtilisateurId(): Collection
    {
        return $this->Utilisateur_id;
    }

    public function addUtilisateurId(Commentaire $utilisateurId): self
    {
        if (!$this->Utilisateur_id->contains($utilisateurId)) {
            $this->Utilisateur_id->add($utilisateurId);
            $utilisateurId->setArticleId($this);
        }

        return $this;
    }

    public function removeUtilisateurId(Commentaire $utilisateurId): self
    {
        if ($this->Utilisateur_id->removeElement($utilisateurId)) {
            // set the owning side to null (unless already changed)
            if ($utilisateurId->getArticleId() === $this) {
                $utilisateurId->setArticleId(null);
            }
        }

        return $this;
    }

    /**
     * @return Collection<int, Commentaire>
     */
    public function getCommentaires(): Collection
    {
        return $this->commentaires;
    }

    public function addCommentaire(Commentaire $commentaire): self
    {
        if (!$this->commentaires->contains($commentaire)) {
            $this->commentaires->add($commentaire);
            $commentaire->setArticle($this);
        }

        return $this;
    }

    public function removeCommentaire(Commentaire $commentaire): self
    {
        if ($this->commentaires->removeElement($commentaire)) {
            // set the owning side to null (unless already changed)
            if ($commentaire->getArticle() === $this) {
                $commentaire->setArticle(null);
            }
        }

        return $this;
    }

    public function getPublie(): ?int
    {
        return $this->publie;
    }

    public function setPublie(?bool $publie): self
    {
        $this->publie = $publie;

        return $this;
    }

    public function isPubli(): ?bool
    {
        return $this->publi;
    }

    public function setPubli(?bool $publi): self
    {
        $this->publi = $publi;

        return $this;
    }
}
