@startuml

skinparam classAttributeIconSize 0

class Article {
    -id : nom
    -titre : string
    -contenu : text
    -createdAt : dateTime
    -slug : slug
    -publie : int

}

class Categorie {
    -id : int
    -titre : titre
    -slug : slug
}

class Commentaire {
    -id : int
    -contenu : string
    -createdAt : dateTime
}

class Utilisateur {
    -id : int
    -prenom : string
    -nom : string
    -pseudo: string
}

class Contact {
    - nom : string
    - prenom : string
    - adresseEmail : string
    - sujet : string
    - description : string

}

Categorie "0..*" -- "0..1" Article
Commentaire "0..*" -- "1..1" Article
Utilisateur "0..1" -- "0..*" Commentaire
@enduml